Update activitiy_rating save_button
This commit adds sleep rating activity layout.
resolves #3

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="wake_upMSG1">Wake Up !</string>
     <string name="wakeupMSG2">오늘 잠은 어떠셨나요?</string>
     <string name="emptystar">emptyStar</string>
+    <string name="save">save</string>
 </resources>
