--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Dururung</string>
+    <string name="wake_upMSG1">Wake Up !</string>
+    <string name="wakeupMSG2">오늘 잠은 어떠셨나요?</string>
+    <string name="emptystar">emptyStar</string>
+    <string name="save">save</string>
 </resources>
