--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="wakeupMSG2">오늘 잠은 어떠셨나요?</string>
     <string name="emptystar">emptyStar</string>
     <string name="save">save</string>
+    <string name="stop">STOP</string>
 </resources>
